use bootstrap navbar, add event start date

--- a/client/template/nav.html
+++ b/client/template/nav.html
@@ -1,13 +1,30 @@
 <template name="nav">
-    <ul>
-        <li>
-            {{>loginButtons}}
-        </li>
-        <li>
-            <a href="/todos">Reminders</a>
-        </li>
-        <li>
-            <a href="/todos/create">Add Reminder</a>
-        </li>
-    </ul>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/todos">Reminders</a>
+          {{>loginButtons}}
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/todos">Home</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Reminders
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <li><a class="dropdown-item" href="/todos">List View</a></li>
+                  <li><a class="dropdown-item" href="/todos-calendar">Calendar View</a></li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/todos/create">Add Reminder</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
 </template>
