--- a/client/template/todo_show.html
+++ b/client/template/todo_show.html
@@ -30,9 +30,13 @@
                             </div>
                             <div class="form-group">
                                 <label for="start">Start:</label>
+                                <!--
                                 <input type="date" id="start" name="start" 
                                 value={{start}} min="2018-01-01" 
-                                max="2022-12-31">
+                                max="2022-12-31"> -->
+                                <input type="datetime-local" id="start" name="start"
+                                    value={{start}} min="2018-06-07T00:00" 
+                                    max="2022-06-14T00:00">
                             </div>
                             <div class="form-group">
                                 <label for="">{{createdAt}}</label>
